Agent query: Does the preview pane update in real-time when you select different fields as searchable or metadata?
Add real-time data structure preview to the data transformation tool.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/5fd0e69d-4df1-4e93-a902-c0195d8a4e46/e753502d-bb98-411c-8016-82abe0fbff1f.jpg

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,13 @@
                 <div id="fieldsContainer" class="mb-3">
                     <!-- Fields will be dynamically added here -->
                 </div>
-                <button id="transformButton" class="btn btn-primary">Transform Data</button>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h6 class="mb-3">Preview Structure</h6>
+                        <pre id="previewOutput" class="bg-dark text-light p-3 rounded" style="max-height: 300px; overflow-y: auto;"></pre>
+                    </div>
+                </div>
+                <button id="transformButton" class="btn btn-primary mt-3">Transform Data</button>
             </div>
         </div>
 
