Agent query: Can you check if the 'Transform Data' button is now visible and clickable after selecting fields?
Enable data transformation button after field selection.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/5fd0e69d-4df1-4e93-a902-c0195d8a4e46/4772fec1-c203-4730-9a9b-0762d9ae6e40.jpg

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                         <pre id="previewOutput" class="bg-dark text-light p-3 rounded" style="max-height: 300px; overflow-y: auto;"></pre>
                     </div>
                 </div>
-                <button id="transformButton" class="btn btn-primary mt-3">Transform Data</button>
+                <button id="transformButton" class="btn btn-primary mt-3" type="button">Transform Data</button>
             </div>
         </div>
 
