--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,10 @@
 
         <!-- Loading Spinner -->
         <div id="loadingSpinner" class="text-center d-none">
-            <div class="spinner-border text-primary" role="status">
+            <div class="spinner-border text-primary mb-2" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
+            <div id="loadingText" class="text-primary">Getting data from Airtable</div>
         </div>
 
         <!-- Error Alert -->
