Agent query: Has the label been changed from "Airtable API Key" to "Airtable Token"?
Update Airtable API Key label to Airtable Token.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/5fd0e69d-4df1-4e93-a902-c0195d8a4e46/79141c37-75a0-495a-bdf8-da3074a0ffab.jpg

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                         <input type="password" class="form-control" id="voiceflowApiKey" required>
                     </div>
                     <div class="mb-3">
-                        <label for="airtableApiKey" class="form-label">Airtable API Key</label>
+                        <label for="airtableApiKey" class="form-label">Airtable Token</label>
                         <input type="password" class="form-control" id="airtableApiKey" required>
                     </div>
                     <div class="mb-3">
